--- a/Amigo Secreto/style.css
+++ b/Amigo Secreto/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .background__detail {
-  background-color: #00f4bf;
+  background-color: #ffffff;
   height: calc(100% - 389px);
   left: 0;
   position: absolute;
@@ -36,8 +36,8 @@ body {
 
 .content {
   background-color: #000;
-  border: 1px solid #1875e8;
-  filter: drop-shadow(0px 0px 30px #1875e8);
+  border: 1px solid #bdbdbd;
+  filter: drop-shadow(0px 0px 30px #b4b4b4);
   height: 871px;
   left: 50%;
   margin: 0 auto;
@@ -49,7 +49,7 @@ body {
 }
 
 .content__corner-rectangle {
-  background-color: #00f4bf;
+  background-color: #444444;
   bottom: -15px;
   clip-path: polygon(0% 100%, 0% 50%, 4% 0%, 100% 0%, 100% 50%, 96% 100%);
   height: 33px;
@@ -69,7 +69,7 @@ body {
 
 .friends__container {
   align-items: center;
-  border: 1px solid #1875e8;
+  border: 1px solid #888c91;
   border-radius: 8px;
   color: #fff;
   display: flex;
@@ -90,7 +90,7 @@ body {
 }
 
 .friends__title {
-  color: #1875e8;
+  color: #a6a8aa;
   font-size: 24px;
   font-weight: 700;
   line-height: 110%;
@@ -112,7 +112,7 @@ body {
 .form__input {
   align-items: center;
   background-color: transparent;
-  border: 1px solid #1875e8;
+  border: 1px solid #989899;
   border-radius: 8px;
   color: #fff;
   display: flex;
@@ -131,7 +131,7 @@ body {
 }
 
 .form__label {
-  color: #1875e8;
+  color: #c0c0c0;
   font-size: 24px;
   font-weight: 700;
   line-height: 110%;
@@ -139,7 +139,7 @@ body {
 }
 
 .form__link {
-  color: #00f4bf;
+  color: #5a5a5a;
   cursor: pointer;
   font-size: 24px;
   font-weight: 400;
@@ -167,14 +167,14 @@ body {
 }
 
 .prizeDraw__title {
-  color: #00f4bf;
+  color: #919191;
   font-size: 24px;
   font-weight: 700;
   line-height: 110%;
 }
 
 .primary {
-  background-color: #1875e8;
+  background-color: #636363;
   color: #fff;
 }
 
@@ -187,7 +187,7 @@ body {
 }
 
 .section__title {
-  color: #fff;
+  color: #9c9c9c;
   font-family: Chakra Petch;
   font-size: 88px;
   font-style: normal;
@@ -197,10 +197,10 @@ body {
 }
 
 .section__title > span {
-  color: #1875e8;
+  color: #414955;
 }
 
 .secondary {
-  background-color: #fff;
-  color: #1875e8;
+  background-color: #7a7979;
+  color: #ffffff;
 }
